--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <form action="" onsubmit="return validasi(document.querySelector('#email'))">
                     <div class="wrapper">
                         <input type="text" placeholder="Email Address" id="email">
-                        <img src="./images/icon-error.svg" id="error"></img>
+                        <img src="./images/icon-error.svg" id="errore"></img>
                         <button type="submit" value="submit" id="tombol"><img src="./images/icon-arrow.svg" alt=""></button>
                         <p class="error-message"></p>
                     </div>
